--- a/external-styles.css
+++ b/external-styles.css
@@ -1,15 +1,15 @@
-#style-1::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	width: 10px;
 	background-color: #F5F5F5;
 }
 
-#style-1::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #555;
 }
 
-#style-1::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
 	background-color: #F5F5F5;
